--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,8 @@
 
 .container {
 width: 1158px;
+margin: 0 auto;
+padding: 0 15px;
 }
 
 .body {
@@ -35,6 +37,11 @@ header{
 display: flex;
 }
 
+.header-nav{
+  display: flex;
+  align-items: center;
+}
+
 .logo {
   font-family: Raleway, sans-serif;
   color: #4d5ae5;
@@ -43,6 +50,12 @@ display: flex;
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  margin-right: 76px;
+}
+
+.header-nav-list{ 
+display: flex;
+gap: 40px ;
 }
 
 .header-span-logo {
@@ -104,11 +117,17 @@ button:focus {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  padding: 24px 0;
 }
 
 .list-menu:hover,
 .list-menu:focus {
   color: #404bbf;
+}
+
+.list-contacts { 
+display: flex;
+gap: 40px;
 }
 
 .hero-section {
@@ -168,6 +187,8 @@ min-height: 120px;
 }
 
 .text {
+
+ 
   line-height: 1.5;
   letter-spacing: 0.02em;
   font-size: 16px;
