--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,6 @@
 
 .list {
   list-style: none;
-  display: flex;
 }
 
 .container {
@@ -34,10 +33,12 @@ padding: 0 15px;
 header{
   border-bottom: 1px solid #E7E9FC;
 }
-
+.header-div{
+display: flex;
+}
 
 .header-nav{
-
+  display: flex;
   align-items: center;
 }
 
@@ -53,7 +54,7 @@ header{
 }
 
 .header-nav-list{ 
-
+display: flex;
 gap: 40px ;
 }
 
@@ -125,12 +126,13 @@ button:focus {
 }
 
 .list-contacts { 
-
+display: flex;
 gap: 40px;
 }
 
 .hero-section {
   background-color: #2e2f42;
+  padding: 188px 0;
 }
 
 .title-hero{
