--- a/css/styles.css
+++ b/css/styles.css
@@ -102,12 +102,12 @@ a :focus {
 .title-section-one{
   margin-bottom: 8px;
 }
-.setion-one-list{
+.setion-list{
 display: flex;
 gap: 24px;
 }
 
-.section-one-list-features {
+.section-one-list {
   width: calc((100% - 72px) / 4)
 }
 
@@ -166,9 +166,15 @@ min-height: 120px;
   color: #434455;
 }
 
+.section-two{
+padding-bottom: 120px;
+}
 
 .section-three {
   background-color: #f4f4fd;
+}
+.section-two-list{
+  width: calc((100% - 48px) / 3)
 }
 
 .list-section-three {
@@ -189,7 +195,10 @@ min-height: 120px;
   text-transform: capitalize;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 72px;
 }
+
+
 
 .title-hthree {
   font-weight: 500;
