--- a/css/styles.css
+++ b/css/styles.css
@@ -179,6 +179,7 @@ button:focus {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 .text {
@@ -287,9 +288,12 @@ Footer- .footer {
   row-gap: 48px;
 }
 
+.pfl-list{
+ width:  calc((100% - 48px) / 3);
+}
+
 .pfl-main-div {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
-  margin-bottom: 8px;
 }
