--- a/css/styles.css
+++ b/css/styles.css
@@ -189,7 +189,7 @@ button:focus {
   color: #434455;
 }
 
-Section-three 
+
 
 .section-three {
   padding: 120px 0;
@@ -227,7 +227,7 @@ Section-three
   font-size: 16px;
 }
 
-Footer- .footer {
+ .footer {
   background-color: #2e2f42;
   padding-top: 100px;
   padding-bottom: 100px;
