--- a/css/styles.css
+++ b/css/styles.css
@@ -189,7 +189,7 @@ button:focus {
   color: #434455;
 }
 
-
+#Section 
 
 .section-three {
   padding: 120px 0;
@@ -291,7 +291,7 @@ button:focus {
 }
 
 .pfl-list {
- width: calc((100% - 48px) / 3);
+  width: calc((100% - 48px) / 3);
 }
 
 .pfl-main-div {
