--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,7 @@ a :focus {
 }
 
 .section-one-list-features {
-  width: calc((100% - 72px) / 4);
+  flex-basis: calc((100% - 3 * 24px) / 4) 
 }
 
 button:hover,
