--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,7 @@ a :focus {
 }
 
 .section-one-list-features {
-  flex-basis: calc((100% - 3 * 24px) / 4) 
+  flex-basis: calc((100% - 3 * 24px) / 4); 
 }
 
 button:hover,
@@ -297,7 +297,7 @@ button:focus {
 }
 
 .pfl-row-list {
-  width: calc((100% - 48px) / 3);
+  width: calc((100% - 48px)/3);
 }
 
 .pfl-main-div {
