--- a/css/styles.css
+++ b/css/styles.css
@@ -302,7 +302,7 @@ button:focus {
 }
 
 .pfl-row-list {
-  width: calc((100% - 48px) / 3);
+  flex-basis: calc((100% - 3 * 24px) / 4);
 }
 
 .pfl-main-div {
