--- a/css/styles.css
+++ b/css/styles.css
@@ -148,6 +148,8 @@ button:focus {
 .title-hero {
   max-width: 496px;
   min-height: 120px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .address {
@@ -301,7 +303,7 @@ button:focus {
 }
 
 .pfl-row-list {
-  flex-basis: calc((100% - 3 * 24px) / 4);
+  width: calc((100% - 48px) / 3);
 }
 
 .pfl-main-div {
