--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,9 @@
 :root {
+  /* Fonts */
+  --font-primary: 'Roboto', sans-serif;
+  --font-secondary: 'Releway', sans-serif;
+
+/* Colors */
   --color-iris: #4d5ae5;
   --color-ocean: #404bbf;
   --color-green: #31d0aa;
@@ -9,6 +14,10 @@
   --color-grey: #2e2f42;
   --color-white: #ffffff;
   --color-dairy: #fcfcfc;
+
+  /* Others */
+  --intent: 24px;
+  --items: 4;
 }
 
 img { 
@@ -303,7 +312,7 @@ button:focus {
 }
 
 .pfl-row-list {
-  width: calc((100% - 48px) / 3);
+flex-basis: calc(100% - var(--intent) * (var(--items) - 1)) / var(--items);
 }
 
 .pfl-main-div {
