--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,4 @@
 :root {
-  /* Fonts */
-  --font-primary: 'Roboto', sans-serif;
-  --font-secondary: 'Releway', sans-serif;
-
-/* Colors */
   --color-iris: #4d5ae5;
   --color-ocean: #404bbf;
   --color-green: #31d0aa;
@@ -14,10 +9,6 @@
   --color-grey: #2e2f42;
   --color-white: #ffffff;
   --color-dairy: #fcfcfc;
-
-  /* Others */
-  --intent: 24px;
-  --items: 4;
 }
 
 img { 
@@ -305,16 +296,14 @@ button:focus {
 }
 
 .pfl-list {
---items: 3;
-  row-gap: 48px;
-}
-.card-set {
   display: flex;
   flex-wrap: wrap;
-  gap: var(--intent);
+  column-gap: 24px;
+  row-gap: 48px;
 }
+
 .pfl-row-list {
-flex-basis: calc(100% - var(--intent) * (var(--items) - 1)) / var(--items);
+  width: calc((100% - 48px) / 3);
 }
 
 .pfl-main-div {
