--- a/css/styles.css
+++ b/css/styles.css
@@ -98,6 +98,8 @@ a :focus {
   height: 56px;
   border: none;
   border-radius: 4px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .section-one {
   padding: 120px 0;
