--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@
   --color-dairy: #fcfcfc;
 }
 
-img { 
+img {
   display: block;
 }
 
@@ -60,7 +60,7 @@ header {
 .header-nav-list {
   display: flex;
   gap: 40px;
-  padding-right: 332px;
+  margin-right: 332px;
 }
 
 .header-span-logo {
@@ -115,7 +115,7 @@ a :focus {
 }
 
 .section-one-list-features {
-   width: calc((100% - 72px) / 4);
+  width: calc((100% - 72px) / 4);
 }
 
 button:hover,
@@ -168,11 +168,10 @@ button:focus {
   display: flex;
   gap: 24px;
   padding-left: 0;
-  
 }
 
 .section-two-list-work {
-  width:calc((100% - 48px)/3);
+  width: calc((100% - 48px) / 3);
 }
 
 .title-section {
@@ -200,8 +199,6 @@ button:focus {
   font-size: 16px;
   color: #434455;
 }
-
-
 
 .section-three {
   padding: 120px 0;
@@ -240,9 +237,7 @@ button:focus {
   font-size: 16px;
 }
 
-
-
- .footer {
+.footer {
   background-color: #2e2f42;
   padding-top: 100px;
   padding-bottom: 100px;
@@ -314,5 +309,3 @@ button:focus {
   border: 1px solid #e7e9fc;
   border-top: none;
 }
-
-
