--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,10 @@ header {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   margin-right: 76px;
+  display: flex;
+flex-direction: row;
+align-items: center;
+padding: 0px;
 
 }
 
