--- a/css/styles.css
+++ b/css/styles.css
@@ -318,13 +318,15 @@ button:focus {
 }
 
 .pfl-list {
-  width: calc((100% - 48px) / 3);
   display: flex;
   flex-wrap: wrap;
   column-gap: 24px;
   row-gap: 48px;
 }
 
+.pfl-row-list {
+width: calc((100% - 48px) / 3);
+}
 
 .pfl-main-div {
   padding: 32px 16px;
