--- a/css/styles.css
+++ b/css/styles.css
@@ -322,7 +322,7 @@ button:focus {
 }
 
 .pfl-row-list {
-  width: calc((100% - 2 * 24px) / 3);
+  width: calc((100% - 48px) / 3);
 }
 
 .pfl-main-div {
