--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ header {
 .header-nav-list {
   display: flex;
   gap: 40px;
-  padding-right: 250px;
+
 }
 
 .header-span-logo {
@@ -78,6 +78,8 @@ header {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  padding: 24px 0;
+  display: block;
 }
 
 a :hover,
@@ -133,6 +135,7 @@ a :focus {
   display: flex;
   gap: 24px;
   padding-left: 0;
+  margin: 0;
 }
 
 .section-one-list-features {
@@ -152,6 +155,7 @@ button:focus {
   letter-spacing: 0.02em;
   color: #2e2f42;
   padding: 24px 0;
+  display: block;
 }
 
 .header-list-menu:hover,
@@ -171,7 +175,6 @@ button:focus {
 
 .title-hero {
   max-width: 496px;
-  min-height: 120px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -180,6 +183,7 @@ button:focus {
   line-height: 1.5;
   letter-spacing: 0.002em;
   color: #434455;
+  margin-left: auto;
 }
 
 .section-two {
@@ -223,6 +227,7 @@ button:focus {
 
 .section-three {
   padding: 120px 0;
+  background: #F4F4FD;
 }
 
 .section-three-list {
@@ -247,11 +252,10 @@ button:focus {
   letter-spacing: 0.02em;
   color: #2e2f42;
   margin-bottom: 8px;
-  text-align: center;
+ 
 }
 
 .paragraph-hthree {
-  text-align: center;
   color: #434455;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -281,6 +285,7 @@ button:focus {
 
 .footer-paragraph {
   max-width: 264px;
+  color: #F4F4FD;
 }
 
 .pfl-main-section {
@@ -325,8 +330,9 @@ button:focus {
   width: calc((100% - 48px) / 3);
 }
 
-.pfl-main-div {
+.pfl-main-div { 
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
 }
+
