--- a/css/styles.css
+++ b/css/styles.css
@@ -252,6 +252,7 @@ button:focus {
   letter-spacing: 0.02em;
   color: #2e2f42;
   margin-bottom: 8px;
+  text-align: center;
  
 }
 
@@ -260,6 +261,7 @@ button:focus {
   line-height: 1.5;
   letter-spacing: 0.02em;
   font-size: 16px;
+  text-align: center;
 }
 
 .footer {
