--- a/css/styles.css
+++ b/css/styles.css
@@ -177,6 +177,11 @@ button:focus {
   max-width: 496px;
   margin-left: auto;
   margin-right: auto;
+  font-size: 56px;
+  line-height: 1.07;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #ffffff;
 }
 
 .address {
@@ -252,8 +257,6 @@ button:focus {
   letter-spacing: 0.02em;
   color: #2e2f42;
   margin-bottom: 8px;
-  text-align: center;
- 
 }
 
 .paragraph-hthree {
@@ -261,7 +264,8 @@ button:focus {
   line-height: 1.5;
   letter-spacing: 0.02em;
   font-size: 16px;
-  text-align: center;
+
+
 }
 
 .title-team{
