--- a/css/styles.css
+++ b/css/styles.css
@@ -129,6 +129,7 @@ a :focus {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+  list-style: none; 
 }
 
 .setion-one-list {
@@ -189,6 +190,7 @@ button:focus {
   letter-spacing: 0.002em;
   color: #434455;
   margin-left: auto;
+  font-style: normaltitle-section
 }
 
 .section-two {
