--- a/css/styles.css
+++ b/css/styles.css
@@ -114,6 +114,7 @@ a :focus {
   border-radius: 4px;
   margin-left: auto;
   margin-right: auto;
+gap: 10px;
 }
 .section-one {
   padding: 120px 0;
