--- a/css/styles.css
+++ b/css/styles.css
@@ -114,7 +114,8 @@ a :focus {
   border-radius: 4px;
   margin-left: auto;
   margin-right: auto;
-gap: 10px;
+  gap: 10px;
+  margin-top: 48px;
 }
 .section-one {
   padding: 120px 0;
